Fix: Unnecessary scrollbars showing. Lorem texts.

--- a/src/Styles/About.module.css
+++ b/src/Styles/About.module.css
@@ -45,6 +45,7 @@
     color: #e0e0e0aa;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin-bottom: 2vh;
 
 }
