--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ body {
   align-items: center;
 
 }
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0
+}
